Base player service done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
             </intent-filter>
         </activity>
         <service android:name=".services.playerService.PlayerService" />
+        <receiver android:name=".services.playerService.PlayerBroadcastReceiver"/>
     </application>
 
 </manifest>
