--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
     implementation 'com.github.adrienpoupa:jaudiotagger:2.2.3'
+    implementation "androidx.room:room-coroutines:$rootProject.room_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1"
 
 }
