--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     implementation "androidx.room:room-coroutines:$rootProject.room_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1"
-
+    implementation "me.tankery.lib:circularSeekBar:1.1.7"
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
 }
