--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$rootProject.room_version"
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     kapt "android.arch.persistence.room:compiler:$rootProject.room_version"
     androidTestImplementation "android.arch.persistence.room:testing:$rootProject.room_version"
