--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,26 +34,35 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-beta01'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation "android.arch.persistence.room:runtime:$rootProject.room_version"
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    kapt "android.arch.persistence.room:compiler:$rootProject.room_version"
-    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.room_version"
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02'
-    implementation 'com.github.adrienpoupa:jaudiotagger:2.2.3'
+    testImplementation 'junit:junit:4.12'
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    //Room Implementation
+    implementation "android.arch.persistence.room:runtime:$rootProject.room_version"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.room_version"
     implementation "androidx.room:room-coroutines:$rootProject.room_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+    kapt "android.arch.persistence.room:compiler:$rootProject.room_version"
+    implementation "androidx.room:room-coroutines:$rootProject.room_version"
+    //Retrofit implementation
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    //Youtube implementation
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    //Circular player view and seekbar implementation
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     implementation 'com.savantech.seekarc:seekarc:1.0.2'
-    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    implementation 'com.android.support:design:28.0.0'
+    //Coroutines implementation
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+    //misc implementation
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.github.adrienpoupa:jaudiotagger:2.2.3'
+
+
 }
