--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,5 @@ dependencies {
     //Other
     implementation 'com.github.adrienpoupa:jaudiotagger:2.2.3'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    implementation 'android.arch.navigation:navigation-fragment:1.0.0'
 }
